# models/recommendations.go
@@ -1,0 +1,56 @@
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"strconv"
+
+	"github.com/go-swagger/go-swagger/errors"
+	"github.com/go-swagger/go-swagger/httpkit/validate"
+	"github.com/go-swagger/go-swagger/strfmt"
+	"github.com/go-swagger/go-swagger/swag"
+)
+
+/*Recommendations Recommendations recommendations
+
+swagger:model Recommendations
+*/
+type Recommendations struct {
+
+	/* LearningResourceIds learning resource ids
+	 */
+	LearningResourceIds []int64 `json:"learning_resource_ids,omitempty"`
+}
+
+// Validate validates this recommendations
+func (m *Recommendations) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateLearningResourceIds(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Recommendations) validateLearningResourceIds(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.LearningResourceIds) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.LearningResourceIds); i++ {
+
+		if err := validate.Required("learning_resource_ids"+"."+strconv.Itoa(i), "body", int64(m.LearningResourceIds[i])); err != nil {
+			return err
+		}
+
+	}
+
+	return nil
+}
