# restapi/operations/find_recommendation_for_learning_resource_responses.go
@@ -1,0 +1,89 @@
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-swagger/go-swagger/httpkit"
+
+	"github.com/gophergala2016/wwcdc_01/models"
+)
+
+/*FindRecommendationForLearningResourceOK learning resource recommendations response
+
+swagger:response findRecommendationForLearningResourceOK
+*/
+type FindRecommendationForLearningResourceOK struct {
+
+	// In: body
+	Payload *models.Recommendations `json:"body,omitempty"`
+}
+
+// NewFindRecommendationForLearningResourceOK creates FindRecommendationForLearningResourceOK with default headers values
+func NewFindRecommendationForLearningResourceOK() *FindRecommendationForLearningResourceOK {
+	return &FindRecommendationForLearningResourceOK{}
+}
+
+// WithPayload adds the payload to the find recommendation for learning resource o k response
+func (o *FindRecommendationForLearningResourceOK) WithPayload(payload *models.Recommendations) *FindRecommendationForLearningResourceOK {
+	o.Payload = payload
+	return o
+}
+
+// WriteResponse to the client
+func (o *FindRecommendationForLearningResourceOK) WriteResponse(rw http.ResponseWriter, producer httpkit.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		if err := producer.Produce(rw, o.Payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*FindRecommendationForLearningResourceDefault unexpected error
+
+swagger:response findRecommendationForLearningResourceDefault
+*/
+type FindRecommendationForLearningResourceDefault struct {
+	_statusCode int
+
+	// In: body
+	Payload *models.ErrorModel `json:"body,omitempty"`
+}
+
+// NewFindRecommendationForLearningResourceDefault creates FindRecommendationForLearningResourceDefault with default headers values
+func NewFindRecommendationForLearningResourceDefault(code int) *FindRecommendationForLearningResourceDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &FindRecommendationForLearningResourceDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the find recommendation for learning resource default response
+func (o *FindRecommendationForLearningResourceDefault) WithStatusCode(code int) *FindRecommendationForLearningResourceDefault {
+	o._statusCode = code
+	return o
+}
+
+// WithPayload adds the payload to the find recommendation for learning resource default response
+func (o *FindRecommendationForLearningResourceDefault) WithPayload(payload *models.ErrorModel) *FindRecommendationForLearningResourceDefault {
+	o.Payload = payload
+	return o
+}
+
+// WriteResponse to the client
+func (o *FindRecommendationForLearningResourceDefault) WriteResponse(rw http.ResponseWriter, producer httpkit.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		if err := producer.Produce(rw, o.Payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
