# swagger.json
@@ -253,6 +253,39 @@
                 }
             }
         },
+        "/learning-resources/{id}/recommendations": {
+            "get": {
+                "description": "Returns recommendations based on the user viewing and the current learning resource being viewed",
+                "operationId": "findRecommendationForLearningResource",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of learning resource to fetch reviews for",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "learning resource recommendations response",
+                        "schema": {
+                            "$ref": "#/definitions/Recommendations"
+                        }
+                    },
+                    "default": {
+                        "description": "unexpected error",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorModel"
+                        }
+                    }
+                }
+            }
+        },
         "/reviews": {
             "get": {
                 "description": "Returns recent reviews",
@@ -500,6 +533,18 @@
         }
     },
     "definitions": {
+        "Recommendations": {
+            "type": "object",
+            "properties": {
+                "learning_resource_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                }
+            }
+        },
         "User": {
             "type": "object",
             "required": [
